[tool.poetry]
name = "e-motion"
version = "0.3.0"
description = "Being happy :) being sad :( with this tool you become sentiment giga chad!"
authors = ["Konrad Konieczny <konradkon@duck.com>", "Kamil Kotkowski <kamilkotkowski17@gmail.com>", "Daniil Ivzhenko <daniilagimail.pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gradio = "^4.2.0"
transformers = "^4.36.2"
scipy = "^1.11.4"
numpy = "^1.26.3"
torch = "2.1.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
ruff = "^0.1.11"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "INP001", "D203", "D213"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
